MyLanguageParser.py
# Generated from MyLanguage.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MyLanguageParser ( Parser ):

    grammarFileName = "MyLanguage.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'begin'", "'end'", "'array'", "'integer'", 
                     "'real'", "'bool'", "'string'", "'logic'", "'for'", 
                     "'until'", "'do'", "'if'", "'then'", "'else'", "'or'", 
                     "'and'", "'not'", "'output'", "'goto'", "'end#'", "':'", 
                     "'$'", "';'", "','", "'['", "']'", "'('", "')'", "'{'", 
                     "'}'", "'='", "'+'", "'-'", "'*'", "'/'", "'++'", "'--'", 
                     "'^'", "'>'", "'<'", "'=='" ]

    symbolicNames = [ "<INVALID>", "BEGIN", "END", "ARRAY", "INTEGER", "REAL", 
                      "BOOL", "STRING", "LOGIC", "FOR", "UNTIL", "DO", "IF", 
                      "THEN", "ELSE", "OR", "AND", "NOT", "OUTPUT", "GOTO", 
                      "ENDHASH", "COLON", "DOLLAR", "SEMICOLON", "COMMA", 
                      "LBRACK", "RBRACK", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "ASSIGN", "PLUS", "MINUS", "MULT", "DIV", 
                      "INC", "DEC", "POW", "GT", "LT", "EQ", "ID", "IDM", 
                      "IDMET", "CONST_INT", "CONST_REAL", "CONST_STRING", 
                      "WS" ]

    RULE_program = 0
    RULE_block = 1
    RULE_descriptionList = 2
    RULE_tailDescription = 3
    RULE_description = 4
    RULE_simpleVarDescription = 5
    RULE_arrayDescription = 6
    RULE_type = 7
    RULE_identifierList = 8
    RULE_tailIdentifier = 9
    RULE_bounds = 10
    RULE_statementList = 11
    RULE_tailStatement = 12
    RULE_statement = 13
    RULE_ifStatement = 14
    RULE_outputStatement = 15
    RULE_outputList = 16
    RULE_tailOutput = 17
    RULE_forStatement = 18
    RULE_step = 19
    RULE_loopBody = 20
    RULE_labelStatement = 21
    RULE_variable = 22
    RULE_arrayVariable = 23
    RULE_index = 24
    RULE_constant = 25
    RULE_expression = 26
    RULE_expressionTail = 27
    RULE_fTail = 28
    RULE_condition = 29
    RULE_comparisonOp = 30

    ruleNames =  [ "program", "block", "descriptionList", "tailDescription", 
                   "description", "simpleVarDescription", "arrayDescription", 
                   "type", "identifierList", "tailIdentifier", "bounds", 
                   "statementList", "tailStatement", "statement", "ifStatement", 
                   "outputStatement", "outputList", "tailOutput", "forStatement", 
                   "step", "loopBody", "labelStatement", "variable", "arrayVariable", 
                   "index", "constant", "expression", "expressionTail", 
                   "fTail", "condition", "comparisonOp" ]

    EOF = Token.EOF
    BEGIN=1
    END=2
    ARRAY=3
    INTEGER=4
    REAL=5
    BOOL=6
    STRING=7
    LOGIC=8
    FOR=9
    UNTIL=10
    DO=11
    IF=12
    THEN=13
    ELSE=14
    OR=15
    AND=16
    NOT=17
    OUTPUT=18
    GOTO=19
    ENDHASH=20
    COLON=21
    DOLLAR=22
    SEMICOLON=23
    COMMA=24
    LBRACK=25
    RBRACK=26
    LPAREN=27
    RPAREN=28
    LBRACE=29
    RBRACE=30
    ASSIGN=31
    PLUS=32
    MINUS=33
    MULT=34
    DIV=35
    INC=36
    DEC=37
    POW=38
    GT=39
    LT=40
    EQ=41
    ID=42
    IDM=43
    IDMET=44
    CONST_INT=45
    CONST_REAL=46
    CONST_STRING=47
    WS=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def COLON(self):
            return self.getToken(MyLanguageParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(MyLanguageParser.BlockContext,0)


        def EOF(self):
            return self.getToken(MyLanguageParser.EOF, 0)

        def ID(self):
            return self.getToken(MyLanguageParser.ID, 0)

        def getRuleIndex(self):
            return MyLanguageParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MyLanguageParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            localctx.name = self.match(MyLanguageParser.ID)
            self.state = 63
            self.match(MyLanguageParser.COLON)
            self.state = 64
            self.block()
            self.state = 65
            self.match(MyLanguageParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.descList = None # DescriptionListContext
            self.stmtList = None # StatementListContext

        def BEGIN(self):
            return self.getToken(MyLanguageParser.BEGIN, 0)

        def DOLLAR(self):
            return self.getToken(MyLanguageParser.DOLLAR, 0)

        def END(self):
            return self.getToken(MyLanguageParser.END, 0)

        def descriptionList(self):
            return self.getTypedRuleContext(MyLanguageParser.DescriptionListContext,0)


        def statementList(self):
            return self.getTypedRuleContext(MyLanguageParser.StatementListContext,0)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = MyLanguageParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(MyLanguageParser.BEGIN)
            self.state = 68
            localctx.descList = self.descriptionList()
            self.state = 69
            self.match(MyLanguageParser.DOLLAR)
            self.state = 70
            localctx.stmtList = self.statementList()
            self.state = 71
            self.match(MyLanguageParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DescriptionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.first = None # DescriptionContext
            self.tail = None # TailDescriptionContext

        def description(self):
            return self.getTypedRuleContext(MyLanguageParser.DescriptionContext,0)


        def tailDescription(self):
            return self.getTypedRuleContext(MyLanguageParser.TailDescriptionContext,0)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_descriptionList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDescriptionList" ):
                listener.enterDescriptionList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDescriptionList" ):
                listener.exitDescriptionList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDescriptionList" ):
                return visitor.visitDescriptionList(self)
            else:
                return visitor.visitChildren(self)




    def descriptionList(self):

        localctx = MyLanguageParser.DescriptionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_descriptionList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            localctx.first = self.description()
            self.state = 74
            localctx.tail = self.tailDescription()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TailDescriptionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyLanguageParser.RULE_tailDescription

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EmptyTailContext(TailDescriptionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyLanguageParser.TailDescriptionContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyTail" ):
                listener.enterEmptyTail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyTail" ):
                listener.exitEmptyTail(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmptyTail" ):
                return visitor.visitEmptyTail(self)
            else:
                return visitor.visitChildren(self)


    class NonEmptyTailContext(TailDescriptionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyLanguageParser.TailDescriptionContext
            super().__init__(parser)
            self.next_ = None # DescriptionContext
            self.rest = None # TailDescriptionContext
            self.copyFrom(ctx)

        def SEMICOLON(self):
            return self.getToken(MyLanguageParser.SEMICOLON, 0)
        def description(self):
            return self.getTypedRuleContext(MyLanguageParser.DescriptionContext,0)

        def tailDescription(self):
            return self.getTypedRuleContext(MyLanguageParser.TailDescriptionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNonEmptyTail" ):
                listener.enterNonEmptyTail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNonEmptyTail" ):
                listener.exitNonEmptyTail(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNonEmptyTail" ):
                return visitor.visitNonEmptyTail(self)
            else:
                return visitor.visitChildren(self)



    def tailDescription(self):

        localctx = MyLanguageParser.TailDescriptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tailDescription)
        try:
            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                localctx = MyLanguageParser.NonEmptyTailContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.match(MyLanguageParser.SEMICOLON)
                self.state = 77
                localctx.next_ = self.description()
                self.state = 78
                localctx.rest = self.tailDescription()
                pass
            elif token in [22]:
                localctx = MyLanguageParser.EmptyTailContext(self, localctx)
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DescriptionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyLanguageParser.RULE_description

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ArrayDescContext(DescriptionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyLanguageParser.DescriptionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arrayDescription(self):
            return self.getTypedRuleContext(MyLanguageParser.ArrayDescriptionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayDesc" ):
                listener.enterArrayDesc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayDesc" ):
                listener.exitArrayDesc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayDesc" ):
                return visitor.visitArrayDesc(self)
            else:
                return visitor.visitChildren(self)


    class SimpleDescContext(DescriptionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyLanguageParser.DescriptionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def simpleVarDescription(self):
            return self.getTypedRuleContext(MyLanguageParser.SimpleVarDescriptionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleDesc" ):
                listener.enterSimpleDesc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleDesc" ):
                listener.exitSimpleDesc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleDesc" ):
                return visitor.visitSimpleDesc(self)
            else:
                return visitor.visitChildren(self)



    def description(self):

        localctx = MyLanguageParser.DescriptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_description)
        try:
            self.state = 85
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6, 7]:
                localctx = MyLanguageParser.SimpleDescContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.simpleVarDescription()
                pass
            elif token in [3, 8]:
                localctx = MyLanguageParser.ArrayDescContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.arrayDescription()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleVarDescriptionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.varType = None # TypeContext
            self.vars_ = None # IdentifierListContext

        def type_(self):
            return self.getTypedRuleContext(MyLanguageParser.TypeContext,0)


        def identifierList(self):
            return self.getTypedRuleContext(MyLanguageParser.IdentifierListContext,0)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_simpleVarDescription

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleVarDescription" ):
                listener.enterSimpleVarDescription(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleVarDescription" ):
                listener.exitSimpleVarDescription(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleVarDescription" ):
                return visitor.visitSimpleVarDescription(self)
            else:
                return visitor.visitChildren(self)




    def simpleVarDescription(self):

        localctx = MyLanguageParser.SimpleVarDescriptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_simpleVarDescription)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            localctx.varType = self.type_()
            self.state = 88
            localctx.vars_ = self.identifierList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayDescriptionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyLanguageParser.RULE_arrayDescription

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LogicArrayContext(ArrayDescriptionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyLanguageParser.ArrayDescriptionContext
            super().__init__(parser)
            self.logicName = None # Token
            self.idx = None # IndexContext
            self.copyFrom(ctx)

        def LOGIC(self):
            return self.getToken(MyLanguageParser.LOGIC, 0)
        def IDM(self):
            return self.getToken(MyLanguageParser.IDM, 0)
        def index(self):
            return self.getTypedRuleContext(MyLanguageParser.IndexContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicArray" ):
                listener.enterLogicArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicArray" ):
                listener.exitLogicArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicArray" ):
                return visitor.visitLogicArray(self)
            else:
                return visitor.visitChildren(self)


    class TypedArrayContext(ArrayDescriptionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyLanguageParser.ArrayDescriptionContext
            super().__init__(parser)
            self.arrType = None # TypeContext
            self.arrName = None # Token
            self.range_ = None # BoundsContext
            self.copyFrom(ctx)

        def ARRAY(self):
            return self.getToken(MyLanguageParser.ARRAY, 0)
        def type_(self):
            return self.getTypedRuleContext(MyLanguageParser.TypeContext,0)

        def IDM(self):
            return self.getToken(MyLanguageParser.IDM, 0)
        def bounds(self):
            return self.getTypedRuleContext(MyLanguageParser.BoundsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedArray" ):
                listener.enterTypedArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedArray" ):
                listener.exitTypedArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedArray" ):
                return visitor.visitTypedArray(self)
            else:
                return visitor.visitChildren(self)



    def arrayDescription(self):

        localctx = MyLanguageParser.ArrayDescriptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arrayDescription)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                localctx = MyLanguageParser.TypedArrayContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.match(MyLanguageParser.ARRAY)
                self.state = 91
                localctx.arrType = self.type_()
                self.state = 92
                localctx.arrName = self.match(MyLanguageParser.IDM)
                self.state = 93
                localctx.range_ = self.bounds()
                pass
            elif token in [8]:
                localctx = MyLanguageParser.LogicArrayContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.match(MyLanguageParser.LOGIC)
                self.state = 96
                localctx.logicName = self.match(MyLanguageParser.IDM)
                self.state = 97
                localctx.idx = self.index()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MyLanguageParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MyLanguageParser.REAL, 0)

        def BOOL(self):
            return self.getToken(MyLanguageParser.BOOL, 0)

        def STRING(self):
            return self.getToken(MyLanguageParser.STRING, 0)

        def getRuleIndex(self):
            return MyLanguageParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = MyLanguageParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 240) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.first = None # Token
            self.tail = None # TailIdentifierContext

        def ID(self):
            return self.getToken(MyLanguageParser.ID, 0)

        def tailIdentifier(self):
            return self.getTypedRuleContext(MyLanguageParser.TailIdentifierContext,0)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_identifierList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifierList" ):
                listener.enterIdentifierList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifierList" ):
                listener.exitIdentifierList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifierList" ):
                return visitor.visitIdentifierList(self)
            else:
                return visitor.visitChildren(self)




    def identifierList(self):

        localctx = MyLanguageParser.IdentifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_identifierList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            localctx.first = self.match(MyLanguageParser.ID)
            self.state = 103
            localctx.tail = self.tailIdentifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TailIdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyLanguageParser.RULE_tailIdentifier

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EmptyTailIdContext(TailIdentifierContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyLanguageParser.TailIdentifierContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyTailId" ):
                listener.enterEmptyTailId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyTailId" ):
                listener.exitEmptyTailId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmptyTailId" ):
                return visitor.visitEmptyTailId(self)
            else:
                return visitor.visitChildren(self)


    class NonEmptyTailIdContext(TailIdentifierContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyLanguageParser.TailIdentifierContext
            super().__init__(parser)
            self.next_ = None # Token
            self.rest = None # TailIdentifierContext
            self.copyFrom(ctx)

        def COMMA(self):
            return self.getToken(MyLanguageParser.COMMA, 0)
        def ID(self):
            return self.getToken(MyLanguageParser.ID, 0)
        def tailIdentifier(self):
            return self.getTypedRuleContext(MyLanguageParser.TailIdentifierContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNonEmptyTailId" ):
                listener.enterNonEmptyTailId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNonEmptyTailId" ):
                listener.exitNonEmptyTailId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNonEmptyTailId" ):
                return visitor.visitNonEmptyTailId(self)
            else:
                return visitor.visitChildren(self)



    def tailIdentifier(self):

        localctx = MyLanguageParser.TailIdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_tailIdentifier)
        try:
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                localctx = MyLanguageParser.NonEmptyTailIdContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(MyLanguageParser.COMMA)
                self.state = 106
                localctx.next_ = self.match(MyLanguageParser.ID)
                self.state = 107
                localctx.rest = self.tailIdentifier()
                pass
            elif token in [22, 23]:
                localctx = MyLanguageParser.EmptyTailIdContext(self, localctx)
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoundsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.lower = None # Token
            self.upper = None # Token

        def LBRACK(self):
            return self.getToken(MyLanguageParser.LBRACK, 0)

        def COLON(self):
            return self.getToken(MyLanguageParser.COLON, 0)

        def RBRACK(self):
            return self.getToken(MyLanguageParser.RBRACK, 0)

        def CONST_INT(self, i:int=None):
            if i is None:
                return self.getTokens(MyLanguageParser.CONST_INT)
            else:
                return self.getToken(MyLanguageParser.CONST_INT, i)

        def getRuleIndex(self):
            return MyLanguageParser.RULE_bounds

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBounds" ):
                listener.enterBounds(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBounds" ):
                listener.exitBounds(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBounds" ):
                return visitor.visitBounds(self)
            else:
                return visitor.visitChildren(self)




    def bounds(self):

        localctx = MyLanguageParser.BoundsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_bounds)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(MyLanguageParser.LBRACK)
            self.state = 112
            localctx.lower = self.match(MyLanguageParser.CONST_INT)
            self.state = 113
            self.match(MyLanguageParser.COLON)
            self.state = 114
            localctx.upper = self.match(MyLanguageParser.CONST_INT)
            self.state = 115
            self.match(MyLanguageParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):
        __slots__ = 'parser'
